<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OHC</string>
    <string name="uname">Username</string>
    <string name="connect">Connect</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="status_searching">Searching basestation</string>
    <string name="status_not_found">Couldn\'t find basestation. Touch to try again</string>
    <string name="status_found">Basestation found. IP: </string>
    <string name="status_fail_network">Initialization failed</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connection_failed">Connection failed</string>
    <string name="status_login_failed">Wrong username or password</string>
    <string name="status_manual_wrong">Error in manual configuration</string>
    <string name="status_manual">IP address manually set: </string>
    <string name="devices">Devices</string>
    <string name="ohc">OHC</string>
    <string name="settings">Settings</string>
    <string name="ip_manual">Set IP address manually</string>
    <string name="set_ip">Set IP address</string>
    <string name="ip_address">IP address</string>
    <string name="set_protocol">Set connection protocol</string>
    <string name="protocol">Protocol</string>
    <string name="enter_ip">Enter IP address</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
