<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ohc_login">
    <!--android:id="@+id/">-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/e_passwd"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e_uname"
        android:layout_above="@+id/e_passwd"
        android:layout_alignLeft="@+id/e_passwd"
        android:layout_alignStart="@+id/e_passwd"
        android:layout_alignRight="@+id/e_passwd"
        android:layout_alignEnd="@+id/e_passwd"
        android:hint="@string/uname" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/bt_connect"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/e_passwd"
        android:layout_alignLeft="@+id/e_passwd"
        android:layout_alignStart="@+id/e_passwd"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/t_status"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"/>
</RelativeLayout>
