<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:clickable="true"
        android:background="@drawable/l_item_border"
        android:id="@+id/bl_ip_lan_manual">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ip_manual"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="45dp"
            android:id="@+id/tv_ip_lan_manual"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/cb_ip_lan_manual"
            android:clickable="false"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/st_set_ip_lan"
        android:clickable="true"
        android:background="@drawable/l_item_border"
        android:layout_below="@id/bl_ip_lan_manual">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:clickable="false"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/set_ip"
                android:id="@+id/tv_set_ip_lan"
                android:textColor="@drawable/tv_disabled"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ip_addr_lan"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/tv_disabled"
                android:layout_below="@id/tv_set_ip_lan"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/st_set_protocol"
        android:clickable="true"
        android:layout_below="@id/st_set_ip_lan">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:clickable="false"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/set_protocol"
                android:id="@+id/tv_set_protocol"
                android:textColor="@drawable/tv_disabled"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_protocol"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/tv_disabled"
                android:layout_below="@id/tv_set_protocol"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>